--- a/inc/inctheme.css
+++ b/inc/inctheme.css
@@ -621,18 +621,15 @@ body::-webkit-scrollbar-thumb {
   opacity: 100% !important;
 }
 
-
 .notion-dropdown__option-list {
   display: flex !important;
   z-index: 9 !important;
 }
 
-
-
 .notion-dropdown__option:hover {
   transition: 0.2s ease-in-out;
-  color: var(--inc-main) !important;
-  background-color: var(--inc-dark) !important;
+  color: var(--inc-main) !important; /* ← Text color on hover*/
+  background-color: var(--inc-medium) !important; /* ← Background color on hover*/
   opacity: 100% !important;
 }
 
