--- a/inc/inctheme.css
+++ b/inc/inctheme.css
@@ -1,6 +1,6 @@
 /*
 Project: inc_template
-Author: Luis Rincon - rinconelloinc
+Author: Luis Rincon @rinconelloinc
 Notion / Super Website Template
 Created: Sep 21, 2022
 Updated: Sep 23, 2022
