--- a/flow/style.css
+++ b/flow/style.css
@@ -95,7 +95,7 @@
 
 body {
   padding: 0 !important;
-  background: var(--dark) !important;
+  background: var(--darkest) !important;
   
   -webkit-font-smoothing: antialiased !important;
   -moz-osx-font-smoothing: grayscale !important;
